--- a/pom.xml
+++ b/pom.xml
@@ -140,8 +140,31 @@
             <artifactId>genson</artifactId>
             <version>1.6</version>
         </dependency>
+        
+        
+        <!-- INICIO PDF -->
 
-     
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-asian</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+
+        <!-- FIM PDF -->
+                    
     </dependencies
     >
     <!-- PrimeFaces Repository -->
