--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=1985R0xs_
 spring.jpa.hibernate.ddl-auto=update  
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
